test/libsolidity/syntaxTests/operators/userDefined/implementing_operator_with_error.sol
type Int is int16;

using {IntError as +} for Int global;

error IntError(Int a, Int b);
// ----
// TypeError 8187: (27-35): Expected function name.
